    Added the Title and Version number to jerboa.js
    Converted the fill function to take a Cell instead of a color
    Corrected the Fill and Border functions
    Removed unnecessary Comments and added explicit ones where necessary
    Modified the Detail text so it will always be according to the Canvas size

Added the Project on GitLab and copied and added the latest copy of both the prototype (Terminal) and the latest version of JerboaTTS.

  Jerboa 5: 2018-02-14 20:33:39
    Merged the offset calculation with the render function
    Created a Jerboa.view (similar to Jerboa.grid)
    Updated the several functions
    Jerboa.grid and Jerboa.view can be created/resized to a similar object by providing it directly. Ex: Jerboa.view(Jerboa.grid(20, 20))

  Jerboa 6: 2018-02-17 23:19:49
    Added the Default Cell and Border to Grids (copied when it's created from an existing View/Grid)
    Added support to the Stroke and StrokeWidth properties to Cells
    Backgrounds are now drawn before the Values to avoid clipping the wider ones when there's a background

  ... bug fixing and some optimizing ...

  Jerboa 10: 2018-07-19
    Tested using a custom font. Works in anything with a font property.
    All that is needed is adding the @font-face css and changing the font

    Added the missing ';' to the scripts and other minute changes (based on the AirBnB coding style)
    Some features may be ES6 only, hopefully it works great

    Made sure that whitespaces (' ') aren't 'written' unless the option to include them is 'true'

  Jerboa 11: 2018-07-21
    Made sure that Jerboa only replaces the value or the fill if undefined (on Put)
    This makes sure that the Background is consistant with was was there

    Turned all let/const back to var, no point in requiring ES6 yet

  Jerboa 12: 2018-07-22
    Added a Jerboa.clear function which calls Jerboa.fill with an empty Cell and the force flag
    This makes sure that all cells are cleared instead of setting them to ' '